src/parse/snapshots/protox__parse__tests__parse_enum-10.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_enum() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "an identifier, '}', 'reserved' or 'option'",
            found: RightBracket,
            span: 10..11,
        },
    ],
)
