src/parse/snapshots/protox__parse__tests__parse_enum-12.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_enum() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "an integer",
            found: Ident(
                "foo",
            ),
            span: 17..20,
        },
    ],
)
