src/parse/snapshots/protox__parse__tests__parse_enum-3.snap
---
source: src/parse/tests.rs
expression: parser.parse_enum()
---
Ok(
    Enum {
        name: Ident {
            value: "Foo",
            span: 29..32,
        },
        options: [],
        values: [],
        reserved: [],
        comments: Comments {
            leading_detached_comments: [
                "detached",
            ],
            leading_comment: Some(
                "leading",
            ),
            trailing_comment: Some(
                "trailing\n",
            ),
        },
        span: 24..52,
    },
)
