src/parse/snapshots/protox__parse__tests__parse_enum-8.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "an identifier",
            found: "3",
            span: 5..6,
        },
    ],
)
