src/parse/snapshots/protox__parse__tests__parse_enum-9.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_enum() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "'{'",
            found: FloatLiteral(
                0.1,
            ),
            span: 9..12,
        },
    ],
)
